Thu Apr 15 09:30:30 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/dds/DDS_Listen_T.cpp:
        * connectors/dds4ccm/impl/dds/DataReaderListener_T.h:
        * connectors/dds4ccm/impl/dds/DataReaderListener_T.cpp:
          Resolved test issues regarding portstatuslisteners.

        * connectors/dds4ccm/tests/PSLDeadline/Receiver/PSL_DeadlineTest_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/PSLDeadline/descriptors/Plan.cdp:
        * connectors/dds4ccm/tests/PSLDeadline/descriptors/USER_QOS_PROFILES.xml:
          Layout and naming changes.

Thu Apr 15 10:14:31 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * connectors/ami4ccm/tests/IDL_Test/Hello.idl
        Add extra operation for checking code generation.

Thu Apr 15 09:38:31 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * bin/ciao_tests.lst
        * connectors/ami4ccm/tests/NoReplyH/Sender/NoReplyH_Sender_exec.cpp
        Add test to test suite.

Thu Apr 15 08:47:31 UTC 2010  Marijke Hengstmengel  <mhengstmengel@remedy.nl>

        * connectors/ami4ccm/tests/Exceptions/Sender/ExceptionT_Sender_exec.cpp
        * connectors/ami4ccm/tests/NoReplyH/Sender/NoReplyH_Sender_exec.cpp
        Solve some compile warnings.

Thu Apr 15 07:21:02 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/impl/dds/DataReaderListener.h:
        * connectors/dds4ccm/impl/dds/DataReaderListener.cpp:
        * connectors/dds4ccm/impl/dds/DataWriterListener.h:
        * connectors/dds4ccm/impl/dds/DataWriterListener.cpp:
          Stored pointer to our proxy as class variable. The
          proxy is reused.

        * connectors/dds4ccm/impl/dds/PublisherListener_T.cpp:
          Optimized logging.

Wed Apr 14 19:13:15 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tools/IDL3_to_IDL2/be_sunsoft.cpp:

          Fixed bug in code generation where the
          ACE_(U)INT64_LITERAL macros were generated in
          IDL.
